fixing plus one button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1755,6 +1755,10 @@ h2.subTitle {
     margin-right: 44px;
 }
 
+#___plusone_0 {
+    margin-top: 9px;
+}
+
 /************** COMMENTS ****************/
 
 .comments {
